# xsim-fake-gsplat

./: .gitignore  README.md  pyproject.toml
gsplat/: rendering.py
gsplat/cuda/: _wrapper.py  ext.cpp
gsplat/cuda/csrc/: Rasterization.cpp  Rasterization.h  RasterizeToPixels2DGSFwd.cu
gsplat/cuda/include/: Ops.h
gsplat/strategy/: ops.py
