[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-dgut-gsplat"
version = "0.1.0"
description = "Joint LiDAR and RGB training framework for 3DGUT-style Gaussian splatting pipelines."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "pillow>=10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
